--- a/package.json
+++ b/package.json
@@ -12,15 +12,16 @@
   "license": "ISC",
   "dependencies": {
     "connect-mongo": "^5.0.0",
-    "cookie-parser": "^1.4.6",
+    "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "errorhandler": "^1.5.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
-    "http-errors": "^2.0.0",
     "mongoose": "^7.1.0",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.22",
     "pug": "^3.0.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
