--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "connect-mongo": "^5.0.0",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
@@ -19,6 +20,7 @@
     "express-session": "^1.17.3",
     "mongoose": "^7.1.0",
     "morgan": "^1.10.0",
+    "passport": "^0.6.0",
     "pug": "^3.0.2"
   },
   "devDependencies": {
